--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
     "body-parser": "^1.17.2",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.1",
     "express": "^4.15.3",
     "extract-loader": "^0.1.0",
@@ -28,6 +29,8 @@
     "react-hot-loader": "^1.3.1",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "resolve-url": "^0.2.1",
+    "resolve-url-loader": "^2.0.2",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
@@ -36,7 +39,7 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --devtool eval --colors",
+    "start": "NODE_ENV=development webpack-dev-server --host 0.0.0.0 --devtool eval --colors",
     "build": "NODE_ENV=production webpack -p --config ./webpack.config.js",
     "serve": "NODE_ENV=production PORT=8080 node index.js"
   }
