--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -20,15 +22,25 @@
     "extract-loader": "^0.1.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "flexboxgrid": "^6.3.1",
     "html-webpack-plugin": "^2.28.0",
     "lodash": "^4.17.4",
+    "material-ui": "^0.18.1",
+    "material-ui-superselectfield": "^1.5.4",
+    "moment": "^2.18.1",
+    "mongoose": "^4.10.4",
     "node-sass": "^4.5.3",
+    "nodemon": "^1.11.0",
     "postcss-loader": "^2.0.5",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^1.3.1",
+    "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "redux-devtools": "^3.4.0",
     "resolve-url": "^0.2.1",
     "resolve-url-loader": "^2.0.2",
     "sass-loader": "^6.0.5",
@@ -39,7 +51,8 @@
     "webpack-hot-middleware": "^2.18.0"
   },
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --host 0.0.0.0 --devtool eval --colors",
+    "dev-client": "NODE_ENV=development webpack-dev-server --host 0.0.0.0 --devtool eval --colors",
+    "dev-server": "NODE_ENV=development PORT=8080 nodemon ./index.js",
     "build": "NODE_ENV=production webpack -p --config ./webpack.config.js",
     "serve": "NODE_ENV=production PORT=8080 node index.js"
   }
