--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss-loader": "^2.0.5",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-facebook-login": "^3.6.1",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
