--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
   "repository": "git@github.com:leroywan/mern.git",
   "author": "leroywan <leroywan@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
+  "devDependencies": {},
+  "scripts": {
+    "dev-client": "NODE_ENV=development webpack-dev-server --host 0.0.0.0 --devtool eval --colors",
+    "dev-server": "NODE_ENV=development PORT=8080 nodemon ./index.js",
+    "build": "NODE_ENV=production webpack -p --config ./webpack.config.js",
+    "serve": "NODE_ENV=production PORT=8080 node index.js"
+  },
+  "dependencies": {
+    "axios": "^0.16.2",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
@@ -15,31 +23,39 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "extract-loader": "^0.1.0",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.1",
     "flexboxgrid": "^6.3.1",
     "html-webpack-plugin": "^2.28.0",
+    "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
     "material-ui": "^0.18.1",
     "material-ui-superselectfield": "^1.5.4",
     "moment": "^2.18.1",
     "mongoose": "^4.10.4",
+    "morgan": "^1.8.2",
     "node-sass": "^4.5.3",
+    "nodemailer": "^4.0.1",
     "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "path": "^0.12.7",
     "postcss-loader": "^2.0.5",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-facebook-login": "^3.6.1",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
+    "react-toastify": "^1.7.0",
     "redux": "^3.6.0",
     "redux-devtools": "^3.4.0",
     "resolve-url": "^0.2.1",
@@ -50,15 +66,5 @@
     "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.18.0"
-  },
-  "scripts": {
-    "dev-client": "NODE_ENV=development webpack-dev-server --host 0.0.0.0 --devtool eval --colors",
-    "dev-server": "NODE_ENV=development PORT=8080 nodemon ./index.js",
-    "build": "NODE_ENV=production webpack -p --config ./webpack.config.js",
-    "serve": "NODE_ENV=production PORT=8080 node index.js"
-  },
-  "dependencies": {
-    "dotenv": "^4.0.0",
-    "path": "^0.12.7"
   }
 }
