--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.17.2",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.1",
+    "cuid": "^1.3.8",
     "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "extract-loader": "^0.1.0",
@@ -35,6 +36,7 @@
     "flexboxgrid": "^6.3.1",
     "html-webpack-plugin": "^2.28.0",
     "jsonwebtoken": "^7.4.1",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "material-ui": "^0.18.1",
     "material-ui-superselectfield": "^1.5.4",
@@ -47,6 +49,7 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "path": "^0.12.7",
+    "path-resolver": "^0.0.2",
     "postcss-loader": "^2.0.5",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
@@ -58,12 +61,14 @@
     "react-toastify": "^1.7.0",
     "redux": "^3.6.0",
     "redux-devtools": "^3.4.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "resolve-url": "^0.2.1",
     "resolve-url-loader": "^2.0.2",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
     "webpack": "^2.5.1",
-    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-middleware": "^1.11.0",
     "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.18.0"
   }
