--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "jsonwebtoken": "^7.4.1",
+    "jsonwebtoken-refresh": "^5.7.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.4",
     "material-ui": "^0.18.1",
