--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "path": "^0.12.7",
     "path-resolver": "^0.0.2",
     "postcss-loader": "^2.0.5",
+    "query-string": "^4.3.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^1.3.1",
