--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-spinners": "^0.1.6",
     "react-tap-event-plugin": "^2.0.1",
     "react-toastify": "^1.7.0",
     "redux": "^3.6.0",
